# shim

./: #log.org#  .gitignore  Cargo.toml  LICENSE  README.md
examples/: .#quantum_transformations.rs  categorical_quantum_ml_showcase.rs  categorical_verification.rs  higher_categorical_qml.rs  quantum_transformations.rs
src/: lib.rs
src/category/: bicategory.rs  examples.rs  functor.rs  mod.rs  monad.rs  monoidal.rs
src/machine_learning/: core.rs  dataset.rs  loss.rs  mod.rs  optimizer.rs
src/machine_learning/categorical/: #prediction.rs#  categories.rs  functors.rs  mod.rs  prediction.rs  transformations.rs
src/machine_learning/quantum/: circuit_model.rs  kernel.rs  mod.rs  model.rs  variational.rs
src/quantum/: circuit.rs  density_matrix.rs  differentiation.rs  gate.rs  gate_operations.rs  mod.rs  optimizer.rs  specialized_transformations.rs  state.rs  transformations.rs
src/simulators/: mod.rs  statevector.rs
src/zx_calculus/: diagram.rs
tests/: categorical_qml_showcase_test.rs  category_tests.rs  density_matrix_tests.rs  gate_tests.rs  machine_learning_tests.rs  quantum_tests.rs  simulator_tests.rs
